force-app/main/default/objects/Account/fields/CPQ_Customer_Classification__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Customer_Classification__c</fullName>
    <label>CPQ Customer Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>CSP</fullName>
            </value>
            <value>
                <fullName>Inception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>