force-app/main/default/objects/Account/fields/CPQ_End_Customer_Mandatory_on_Quote__c.field-meta.xml
<CustomField>
    <fullName>CPQ_End_Customer_Mandatory_on_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPQ End Customer Mandatory on Quote</label>
    <type>Checkbox</type>
</CustomField>