force-app/main/default/objects/Account/fields/CPQ_Price_List__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Price_List__c</fullName>
    <label>CPQ Price List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NVIDIA List Price</fullName>
            </value>
            <value>
                <fullName>Disti List Price</fullName>
            </value>
            <value>
                <fullName>OEM List Price</fullName>
            </value>
            <value>
                <fullName>SDP List Price</fullName>
            </value>
            <value>
                <fullName>CSP List Price</fullName>
            </value>
            <value>
                <fullName>Direct VAR Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>