force-app/main/default/objects/Account/fields/CPQ_Price_List_Code__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Price_List_Code__c</fullName>
    <formula>CASE( TEXT(CPQ_Price_List__c), 
&apos;NVIDIA List Price&apos;, &apos;P1&apos;,	
&apos;Disti List Price&apos;, &apos;P2&apos;,	
&apos;OEM List Price&apos;, &apos;P3&apos;,	
&apos;SDP List Price&apos;, &apos;P4&apos;,	
&apos;CSP List Price&apos;, &apos;P5&apos;,
&apos;Direct VAR Price&apos;, &apos;P6&apos;,
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPQ Price List Code</label>
    <type>Text</type>
</CustomField>