force-app/main/default/objects/Account/fields/CPQ_VAR_Mandatory_on_Quote__c.field-meta.xml
<CustomField>
    <fullName>CPQ_VAR_Mandatory_on_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPQ VAR Mandatory on Quote</label>
    <type>Checkbox</type>
</CustomField>