force-app/main/default/objects/Account/fields/CRM_Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_Partner_ID__c</fullName>
    <label>CRM Partner ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>