force-app/main/default/objects/Account/fields/Customer_Reference_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Candidate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Reference Candidate</label>
    <type>Checkbox</type>
</CustomField>