force-app/main/default/objects/Account/fields/Customer_Reference_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Comments__c</fullName>
    <label>Customer Reference Comments</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>