force-app/main/default/objects/Account/fields/Day_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Day_DocuSign__c</fullName>
    <description>This field is being used by the DocuSign Custom Tag &apos;Day_Account_DocuSign&apos; for &quot;DocuSign for Automotive&quot;</description>
    <formula>TEXT(DAY(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day DocuSign</label>
    <type>Text</type>
</CustomField>