force-app/main/default/objects/Account/fields/DBA_Doing_Business_As__c.field-meta.xml
<CustomField>
    <fullName>DBA_Doing_Business_As__c</fullName>
    <description>Partner DBA (Doing Business As) under a different name than Account name</description>
    <label>DBA (Doing Business As)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>