force-app/main/default/objects/Account/fields/DemoRating1__c.field-meta.xml
<CustomField>
    <fullName>DemoRating1__c</fullName>
    <label>DemoRating1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>