force-app/main/default/objects/Account/fields/Designated_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Designated_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designated Engineer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Internal Users can be selected for this field.</errorMessage>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>