force-app/main/default/objects/Account/fields/EAR_Restricted__c.field-meta.xml
<CustomField>
    <fullName>EAR_Restricted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDS-1762 - PUB: Huawei, Dawning/Sugon Updates
EAR (Export Administration Regulations) list</description>
    <inlineHelpText>EAR (Export Administration Regulations) list. We cannot share U.S. proprietary technical information.</inlineHelpText>
    <label>EAR Restricted</label>
    <type>Checkbox</type>
</CustomField>