force-app/main/default/objects/Account/fields/EMS_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>EMS_Customer_Id__c</fullName>
    <label>EMS Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>