force-app/main/default/objects/Account/fields/EMS_Partner_Identifier__c.field-meta.xml
<CustomField>
    <fullName>EMS_Partner_Identifier__c</fullName>
    <formula>IF( ISPICKVAL(SAP_Account_Type__c, &apos;ZVAR&apos;) , &apos;RESELLER&apos;,  IF( ISPICKVAL(SAP_Account_Type__c, &apos;0001&apos;) , &apos;SoldTo&apos;, IF( ISPICKVAL(SAP_Account_Type__c, &apos;ZPEC&apos;) , &apos;Customer&apos;, &apos;&apos;)))</formula>
    <label>EMS Partner Identifier</label>
    <type>Text</type>
</CustomField>