force-app/main/default/objects/Account/fields/EMS_Update_Required__c.field-meta.xml
<CustomField>
    <fullName>EMS_Update_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Licensing 2.0 EMS Updates are monitored using this.</description>
    <label>EMS Update Required</label>
    <type>Checkbox</type>
</CustomField>