force-app/main/default/objects/Account/fields/Enterprise_Data_Center_Priority__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Data_Center_Priority__c</fullName>
    <description>SDS-1538</description>
    <label>Enterprise Data Center Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>Not a Priority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>