force-app/main/default/objects/Account/fields/Executive_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsorship__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box if Elite Partner has been accepted into the Executive Sponsorship program.</inlineHelpText>
    <label>Executive Sponsorship (Elite)</label>
    <type>Checkbox</type>
</CustomField>