force-app/main/default/objects/Account/fields/GRID_ELA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>GRID_ELA_End_Date__c</fullName>
    <label>GRID ELA End Date</label>
    <type>Date</type>
</CustomField>