force-app/main/default/objects/Account/fields/GRID_ELA_Level__c.field-meta.xml
<CustomField>
    <fullName>GRID_ELA_Level__c</fullName>
    <inlineHelpText>ELA0 is default 
ELA1 represents a $250K initial order 
ELA2 represents a $500k initial order 
ELA3 represents a $750k initial order 
ELA4 represents a $1000k initial order</inlineHelpText>
    <label>GRID ELA Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ELA0</fullName>
            </value>
            <value>
                <fullName>ELA1</fullName>
            </value>
            <value>
                <fullName>ELA2</fullName>
            </value>
            <value>
                <fullName>ELA3</fullName>
            </value>
            <value>
                <fullName>ELA4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>