force-app/main/default/objects/Account/fields/Hardware_Software_Support__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Software_Support__c</fullName>
    <inlineHelpText>Select the % of Hardware and Software Support</inlineHelpText>
    <label>Hardware &amp; Software Support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>