force-app/main/default/objects/Account/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inactive Account. Prevents editing the Account except Sys Admin, Data Admin, Sales Profile - Partner Admin</description>
    <inlineHelpText>Inactive/Terminated Account. Do not add/edit Contacts.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>