force-app/main/default/objects/Account/fields/Industries_Select_which_apply__c.field-meta.xml
<CustomField>
    <fullName>Industries_Select_which_apply__c</fullName>
    <inlineHelpText>Select all industries that apply</inlineHelpText>
    <label>Industries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Architecture, Eng and Construction</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Defense/Government</fullName>
            </value>
            <value>
                <fullName>Drones</fullName>
            </value>
            <value>
                <fullName>Financial Services Industry (FSI)</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>GIS (Geographic Info Systems)</fullName>
            </value>
            <value>
                <fullName>Higher Ed/Research</fullName>
            </value>
            <value>
                <fullName>IT Services</fullName>
            </value>
            <value>
                <fullName>IVA (Security &amp; Safety)</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Media/Entertainment</fullName>
            </value>
            <value>
                <fullName>Medical Imaging/Life Sci Instruments</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas/Energy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Retail/Etail</fullName>
            </value>
            <value>
                <fullName>Supercomputing</fullName>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>