force-app/main/default/objects/Account/fields/Industry_Segment__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment__c</fullName>
    <description>SDS-1152</description>
    <inlineHelpText>Controlled by IBD team for reporting purposes</inlineHelpText>
    <label>Industry Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Downstream</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Exchanges and Clearinghouses</fullName>
            </value>
            <value>
                <fullName>Fintech</fullName>
            </value>
            <value>
                <fullName>Hedge Funds and Proprietary Traders</fullName>
            </value>
            <value>
                <fullName>Instruments</fullName>
            </value>
            <value>
                <fullName>Investment Banking</fullName>
            </value>
            <value>
                <fullName>MaaS</fullName>
            </value>
            <value>
                <fullName>Mapping</fullName>
            </value>
            <value>
                <fullName>Market Data Providers</fullName>
            </value>
            <value>
                <fullName>Media Streaming</fullName>
            </value>
            <value>
                <fullName>Midstream</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Oilfield Service Provider</fullName>
            </value>
            <value>
                <fullName>Payers</fullName>
            </value>
            <value>
                <fullName>Pharma</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Regulators</fullName>
            </value>
            <value>
                <fullName>Research &amp; Government</fullName>
            </value>
            <value>
                <fullName>Retail Banking</fullName>
            </value>
            <value>
                <fullName>Retail Insurance (Casualty &amp; Property)</fullName>
            </value>
            <value>
                <fullName>Semiconductor</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Startup</fullName>
            </value>
            <value>
                <fullName>Startups AI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>