force-app/main/default/objects/Account/fields/Is_End_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_End_Customer__c</fullName>
    <formula>RecordType.Name == &apos;New Customer Account&apos; &amp;&amp; INCLUDES(AccountTags__c,&apos;Enterprise Customer&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is End Customer</label>
    <type>Checkbox</type>
</CustomField>