force-app/main/default/objects/Account/fields/Is_Target_List_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_Target_List_Customer__c</fullName>
    <description>For LSID mass enrichment of Target List Customers</description>
    <formula>NOT(ISBLANK(Target_List__c))</formula>
    <inlineHelpText>For LSID mass enrichment of Target List Customers</inlineHelpText>
    <label>Is Target List Customer</label>
    <type>Checkbox</type>
</CustomField>