force-app/main/default/objects/Account/fields/IsCreatedByInternalUser__c.field-meta.xml
<CustomField>
    <fullName>IsCreatedByInternalUser__c</fullName>
    <description>Account Approval: If the Account is created by Internal User then true or false. Used in WF Rule for Account Approval emails</description>
    <formula>IF(ISPICKVAL(CreatedBy.UserType, &apos;Standard&apos;), true, false)</formula>
    <inlineHelpText>Account Approval: If the Account is created by Internal User then true or false</inlineHelpText>
    <label>IsCreatedByInternalUser</label>
    <type>Checkbox</type>
</CustomField>