force-app/main/default/objects/Account/fields/IsNPN_VAR_OEM__c.field-meta.xml
<CustomField>
    <fullName>IsNPN_VAR_OEM__c</fullName>
    <formula>NOT( ISBLANK(NPN_Program_Signed_Date__c )) &amp;&amp; RecordType.Name = &apos;NPN Account Registry&apos; &amp;&amp; NOT (ISPICKVAL ( SAP_Account_Type__c, &apos;0001&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is NPN/VAR/OEM</label>
    <type>Checkbox</type>
</CustomField>