force-app/main/default/objects/Account/fields/LD_USE_DnB_Optimize__c.field-meta.xml
<CustomField>
    <fullName>LD_USE_DnB_Optimize__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows or prevents account match and enrich from D&amp;B Optimizer</description>
    <inlineHelpText>When checked match and enrich from D&amp;B Optimizer will process</inlineHelpText>
    <label>Allow D&amp;B Optimizer</label>
    <type>Checkbox</type>
</CustomField>