force-app/main/default/objects/Account/fields/Lead_Id_For_Account__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id_For_Account__c</fullName>
    <description>Mapped from Leads&apos;s &quot;Lead Id For Account&quot; field.</description>
    <label>Lead Id For Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>