force-app/main/default/objects/Account/fields/leadspacesync__Job_Type__c.field-meta.xml
<CustomField>
    <fullName>leadspacesync__Job_Type__c</fullName>
    <label>Job Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>