force-app/main/default/objects/Account/fields/leadspacesync__Last_Leadspace_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>leadspacesync__Last_Leadspace_Activity_Date__c</fullName>
    <label>Last Leadspace Activity Date</label>
    <type>DateTime</type>
</CustomField>