force-app/main/default/objects/Account/fields/leadspacesync__Leadspace_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>leadspacesync__Leadspace_Error_Code__c</fullName>
    <label>Leadspace Error Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>