force-app/main/default/objects/Account/fields/leadspacesync__Leadspace_Related_Bulk_Name__c.field-meta.xml
<CustomField>
    <fullName>leadspacesync__Leadspace_Related_Bulk_Name__c</fullName>
    <formula>leadspacesync__Related_bulk_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leadspace Related Bulk Id</label>
    <type>Text</type>
</CustomField>