force-app/main/default/objects/Account/fields/leadspacesync__NF_LSCompany8DigitSIC__c.field-meta.xml
<CustomField>
    <fullName>leadspacesync__NF_LSCompany8DigitSIC__c</fullName>
    <label>LS Company 8 Digit SIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>