force-app/main/default/objects/Account/fields/leadspacesync__Related_bulk_ID__c.field-meta.xml
<CustomField>
    <fullName>leadspacesync__Related_bulk_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leadspace Related Bulk Id</label>
    <referenceTo>leadspacesync__Sync_Activity_Bulk__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>