force-app/main/default/objects/Account/fields/leadspacesync__Use_Case__c.field-meta.xml
<CustomField>
    <fullName>leadspacesync__Use_Case__c</fullName>
    <label>Use Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>