force-app/main/default/objects/Account/fields/Legacy_Program_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Program_Signed_Date__c</fullName>
    <description>Old Label: Date of Signed Agreement
Old Field Name: Date_of_Signed_TPP_Agreement</description>
    <label>Legacy Program Signed Date</label>
    <type>Date</type>
</CustomField>