force-app/main/default/objects/Account/fields/Legacy_Program_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Program_Termination_Date__c</fullName>
    <description>Old Field Label: Agreement Termination Date
Old Field Name: TPP_Termination_Date</description>
    <label>Legacy Program Termination Date</label>
    <type>Date</type>
</CustomField>