force-app/main/default/objects/Account/fields/List_education_authorization_sp__c.field-meta.xml
<CustomField>
    <fullName>List_education_authorization_sp__c</fullName>
    <description>List education/academic authorization/specializations</description>
    <inlineHelpText>List education/academic authorization/specializations</inlineHelpText>
    <label>EDU Authorization/Specializations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>