force-app/main/default/objects/Account/fields/List_Gov_t_authorizations_specialization__c.field-meta.xml
<CustomField>
    <fullName>List_Gov_t_authorizations_specialization__c</fullName>
    <description>Government authorizations/specializations:</description>
    <inlineHelpText>List government authorizations/specializations:</inlineHelpText>
    <label>Gov&apos;t authorizations/specializations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>