force-app/main/default/objects/Account/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>Enter location - number of sales staff at location - number of technical staff at location.  Enter 1 line per location in the following format (Location-#Sales-#Technical)</inlineHelpText>
    <label>Location - Sales Staff - Tech Staff</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>