force-app/main/default/objects/Account/fields/LS_COMPANY_CITY__c.field-meta.xml
<CustomField>
    <fullName>LS_COMPANY_CITY__c</fullName>
    <label>LS_COMPANY_CITY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>