force-app/main/default/objects/Account/fields/LS_COMPANY_PRIMARY_NAICS_CODE__c.field-meta.xml
<CustomField>
    <fullName>LS_COMPANY_PRIMARY_NAICS_CODE__c</fullName>
    <label>LS_COMPANY_PRIMARY_NAICS_CODE</label>
    <length>6</length>
    <type>Text</type>
</CustomField>