force-app/main/default/objects/Account/fields/LS_COMPANY_STATE__c.field-meta.xml
<CustomField>
    <fullName>LS_COMPANY_STATE__c</fullName>
    <label>LS_COMPANY_STATE</label>
    <length>3</length>
    <type>Text</type>
</CustomField>