force-app/main/default/objects/Account/fields/LS_COMPANY_TECHNOLOGIES__c.field-meta.xml
<CustomField>
    <fullName>LS_COMPANY_TECHNOLOGIES__c</fullName>
    <label>LS_COMPANY_TECHNOLOGIES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>