force-app/main/default/objects/Account/fields/LS_DU_Company_City__c.field-meta.xml
<CustomField>
    <fullName>LS_DU_Company_City__c</fullName>
    <label>LS DU Company City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>