force-app/main/default/objects/Account/fields/LS_DU_Company_Country__c.field-meta.xml
<CustomField>
    <fullName>LS_DU_Company_Country__c</fullName>
    <label>LS DU Company Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>