force-app/main/default/objects/Account/fields/LS_GU_Company_Website__c.field-meta.xml
<CustomField>
    <fullName>LS_GU_Company_Website__c</fullName>
    <label>LS GU Company Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>