force-app/main/default/objects/Account/fields/LS_GU_Primary_SIC__c.field-meta.xml
<CustomField>
    <fullName>LS_GU_Primary_SIC__c</fullName>
    <label>LS GU Primary SIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>