force-app/main/default/objects/Account/fields/LS_HQ_Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>LS_HQ_Company_Phone__c</fullName>
    <label>LS HQ Company Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>