force-app/main/default/objects/Account/fields/LS_HQ_Primary_SIC__c.field-meta.xml
<CustomField>
    <fullName>LS_HQ_Primary_SIC__c</fullName>
    <label>LS HQ Primary SIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>