force-app/main/default/objects/Account/fields/LS_STATUS__c.field-meta.xml
<CustomField>
    <fullName>LS_STATUS__c</fullName>
    <label>LS_STATUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>