force-app/main/default/objects/Account/fields/LSID_IsBlank__c.field-meta.xml
<CustomField>
    <fullName>LSID_IsBlank__c</fullName>
    <description>Leadspace - custom field to track if the LSID is populated or not. Used to help in the mass enrichment of Target List accounts</description>
    <formula>IsBlank(LSID__c)</formula>
    <inlineHelpText>Leadspace - custom field to track if the LSID is populated or not. Used to help in the mass enrichment of Target List accounts</inlineHelpText>
    <label>LSID IsBlank</label>
    <type>Checkbox</type>
</CustomField>