force-app/main/default/objects/Account/fields/LSID_OnDemandEnrichment_Identifier__c.field-meta.xml
<CustomField>
    <fullName>LSID_OnDemandEnrichment_Identifier__c</fullName>
    <businessOwnerUser>pjena@nvidia.com.trprod</businessOwnerUser>
    <description>This field is used exclusively for the ondemand enrichment of Accounts. As there is no way we can use any existing field to group a set of Accounts that needs to be enriched this field will help us doing that.</description>
    <label>LSID_OnDemandEnrichment_Identifier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>