force-app/main/default/objects/Account/fields/Mapped_Rejection_Text__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Rejection_Text__c</fullName>
    <formula>IF(ISPICKVAL(Reason_for_Rejection__c , &quot;Account Approval Policy&quot;) , &apos;Your account should have at least a contact/opportunity/activity/NPN CSP Usage Tracker item in order to be approved.&apos;,
IF(ISPICKVAL(Reason_for_Rejection__c , &quot;Missing/Invalid Website&quot;) , &apos;Website is not provided for the business entity or the link provided is not directing to the official website.&apos;,
IF(ISPICKVAL(Reason_for_Rejection__c , &quot;Duplicate Account&quot;) , &apos;The account you created is a duplicate. We will merge it into the existing account, so that your contacts and opportunities are preserved (if any).&apos;
			 + &apos; If you do not own the original account, we will add you to the Account Team for visibility provided that the Master record is not a Named/Lighthouse account. Please use the original account to manage your contacts and opportunities (see below link). No further action is required.&apos;,
IF(ISPICKVAL(Reason_for_Rejection__c , &quot;Verify Address&quot;) , &apos;We are unable to verify the billing address on the account.&apos;,&apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mapped Rejection Text</label>
    <type>Text</type>
</CustomField>