force-app/main/default/objects/Account/fields/MDF_Program_Active__c.field-meta.xml
<CustomField>
    <fullName>MDF_Program_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MDF Program Active</label>
    <type>Checkbox</type>
</CustomField>