force-app/main/default/objects/Account/fields/MDF_Program_NVIDIA_Owner__c.field-meta.xml
<CustomField>
    <fullName>MDF_Program_NVIDIA_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDF Program NVIDIA Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>